--- a/src/pages/resume.mdx
+++ b/src/pages/resume.mdx
@@ -4,7 +4,9 @@
 
 ### October 2019 - March 2020
 
-Graduated from Manchester Codes’ Software Engineer FastTrack Course. Over the duration of the course, me and my cohort were taught the fundamentals of Web Development (MERN Stack) by current full-time developers. Manchester Codes employ a broad curriculum of development topics:
+Graduated from Manchester Codes’ Software Engineer FastTrack Course. Me and my cohort were taught the fundamentals of Web Development (MERN Stack) by current full-time developers.
+
+Manchester Codes employ a broad curriculum of development topics:
 
 -   Frontend technology covered included;
     ECMAScript 6, React with a Test Driven Development focus using Jest, GET requests w/ Axios and Enzyme
@@ -17,11 +19,11 @@ Graduated from Manchester Codes’ Software Engineer FastTrack Course. Over the 
 
 Since graduating from MCRcodes I have been continuously expanding my skillset.
 
-Most recently I have been focusing on frontend topics such as; React Native, responsive design, performance and browser support as well as Static Site Generators such as Gatsby.
+Most recently I have been focusing on frontend topics such as; React Native, performance, browser support as well as Static Site Generators such as Gatsby.
 
 # WORK EXPERIENCE
 
-## 10+ Years Experience in Hospitality Preparatory Chef | Kitchen Porter
+## 10+ Years Experience in Hospitality
 
 ### Sept 2008 - Present
 
@@ -35,22 +37,22 @@ Whilst there is little overlap between Hospitality and Software, I have gained c
 
 # EMPLOYMENT HISTORY
 
-## RUDYS NEAPOLITAN PIZZA
+### RUDYS NEAPOLITAN PIZZA
 
 June 2017 - Present
 
-## OSTLERS BAR AND BISTRO
+### OSTLERS BAR AND BISTRO
 
 Oct 2014 - Dec 2015
 
-## THE ANCHOR INN
+### THE ANCHOR INN
 
 Jan 2014 - Sept 2015
 
-## BROWNS WINE BAR
+### BROWNS WINE BAR
 
 Nov 2012 - Jan 2014
 
-## CHESTER’S MEXICAN RESTAURANT
+### CHESTER’S MEXICAN RESTAURANT
 
 Sept 2008 - Apr 2012
