--- a/src/pages/resume.mdx
+++ b/src/pages/resume.mdx
@@ -21,6 +21,14 @@ Since graduating from MCRcodes I have been continuously expanding my skillset.
 
 Most recently I have been focusing on frontend topics such as; React Native, performance, browser support as well as Static Site Generators such as Gatsby.
 
+# EDUCATION
+
+## Manchester Metropolitan University
+
+### September 2016 - June 2018
+
+BA International Politics | 2:1
+
 # WORK EXPERIENCE
 
 ## 10+ Years Experience in Hospitality
