Improve Layout styles

--- a/src/pages/resume.mdx
+++ b/src/pages/resume.mdx
@@ -27,7 +27,7 @@ Most recently I have been focusing on frontend topics such as; React Native, per
 
 ### September 2016 - June 2018
 
-BA International Politics | 2:1
+BA International Politics **|** 2:1
 
 # WORK EXPERIENCE
 
