Update CV and Employment history

--- a/src/pages/resume.mdx
+++ b/src/pages/resume.mdx
@@ -1,25 +1,40 @@
 # PROGRAMMING EXPERIENCE
 
-## Software Engineer FastTrack Course
+## BrightHR
 
-### October 2019 - March 2020
+### September 2019 - July 2022
 
-Graduated from Manchester Codes’ Software Engineer FastTrack Course. Me and my cohort were taught the fundamentals of Web Development (MERN Stack) by current full-time developers.
+As a Frontend developer at BrightHR, my responsibilities included:
 
 Manchester Codes employ a broad curriculum of development topics:
 
--   Frontend technology covered included;
-    ECMAScript 6, React with a Test Driven Development focus using Jest, GET requests w/ Axios and Enzyme
+• Performing user interface changes across various Bright products, using React
+and TailwindCSS
+• Wrote unit tests in Jest with React Testing Library to ensure frontend
+repositories were kept at required code coverage.
+• Performing various codebase maintenance including; converting legacy
+styled-components to TailwindCSS, rewriting Enzyme unit tests to React
+Testing Library and converting React class components to using React Hooks.
+• Closely collaborating with Quality Assurance Analysts by giving detailed
+demonstrations and theorising solutions for squashing bugs in UI with a user
+first approach.
+• Worked in an Agile environment with daily standups, UX show and tells, POA
+meetings and bi-weekly retrospectives.
+• Periodically giving product demonstrations to Research and Development and
+Customer Service teams.
 
--   Backend technology covered included topics such as;
-    API development, REST API’s with CRUD. NoSQL databases, specifically using MongoDB.
-
--   Also included topics such as;
-    Tooling, Version Control, Best Practises (DRY, Maintainability, Scalability) and Remote Pair-Programming.
-
-Since graduating from MCRcodes I have been continuously expanding my skillset.
-
-Most recently I have been focusing on frontend topics such as; React Native, performance, browser support as well as Static Site Generators such as Gatsby.
+At BrightHR some of tasks and projects I worked on included:
+• Migrating BrightHR’s change/reset password functionality from the primary
+WebApp to BrightHR’s User Account WebApp.
+• Implementing new UI and features for BrightHR’s Account Web App.
+• Elevating BrightHR’s Account Web App’s code coverage from 25% to 80%.
+• Working closely with UX designers collaboratively on new product designs,
+giving detailed opinions and reaching consensus based upon scalability and
+consistency across the product.
+• Migrating PoP! mobile application functionality to BrightHR’s main Web App by
+coding new UI and integrating with PoP!’s RESTful API.
+• Implemented numerous UI improvements to various areas of the product
+specifically addressing unit testing and responsive design using media queries.
 
 # EDUCATION
 
@@ -45,9 +60,13 @@ Whilst there is little overlap between Hospitality and Software, I have gained c
 
 # EMPLOYMENT HISTORY
 
+### BrightHR
+
+Sept 2021 - July 2022
+
 ### RUDYS NEAPOLITAN PIZZA
 
-June 2017 - Present
+June 2017 - June 2021
 
 ### OSTLERS BAR AND BISTRO
 
