Update Projects and employment history

--- a/src/pages/resume.mdx
+++ b/src/pages/resume.mdx
@@ -2,38 +2,47 @@
 
 ## BrightHR
 
-### September 2019 - July 2022
+### September 2021 - July 2022
 
-As a Frontend developer at BrightHR, my responsibilities included:
+## As a Frontend developer, my responsibilities included:
 
-Manchester Codes employ a broad curriculum of development topics:
+- Performing UI changes across various Bright products, using React
+and TailwindCSS.
 
-• Performing user interface changes across various Bright products, using React
-and TailwindCSS
-• Wrote unit tests in Jest with React Testing Library to ensure frontend
+- Wrote unit tests in Jest with React Testing Library to ensure frontend
 repositories were kept at required code coverage.
-• Performing various codebase maintenance including; converting legacy
+
+- Performing various codebase maintenance tasks including; converting legacy
 styled-components to TailwindCSS, rewriting Enzyme unit tests to React
 Testing Library and converting React class components to using React Hooks.
-• Closely collaborating with Quality Assurance Analysts by giving detailed
+
+- Closely collaborating with Quality Assurance Analysts by giving detailed
 demonstrations and theorising solutions for squashing bugs in UI with a user
 first approach.
-• Worked in an Agile environment with daily standups, UX show and tells, POA
+
+- Worked in an Agile environment with daily standups, UX show and tells, POA
 meetings and bi-weekly retrospectives.
-• Periodically giving product demonstrations to Research and Development and
+
+- Periodically giving product demonstrations to Research and Development and
 Customer Service teams.
 
-At BrightHR some of tasks and projects I worked on included:
-• Migrating BrightHR’s change/reset password functionality from the primary
-WebApp to BrightHR’s User Account WebApp.
-• Implementing new UI and features for BrightHR’s Account Web App.
-• Elevating BrightHR’s Account Web App’s code coverage from 25% to 80%.
-• Working closely with UX designers collaboratively on new product designs,
+## Some of tasks and projects I worked on included:
+
+-  Migrating BrightHR’s change/reset password functionality from the primary
+WebApp to BrightHR’s User Account Web App.
+
+-  Implementing new UI and features for BrightHR’s Account Web App.
+
+-  Elevating BrightHR’s Account Web App’s code coverage from 25% to 80%.
+
+-  Working closely with UX designers collaboratively on new product designs,
 giving detailed opinions and reaching consensus based upon scalability and
 consistency across the product.
-• Migrating PoP! mobile application functionality to BrightHR’s main Web App by
+
+-  Migrating PoP!, BrightHR's dedicated expense tracking application from mobile to primary Web Application by
 coding new UI and integrating with PoP!’s RESTful API.
-• Implemented numerous UI improvements to various areas of the product
+
+-  Implemented numerous UI improvements to various areas of the product
 specifically addressing unit testing and responsive design using media queries.
 
 # EDUCATION
@@ -46,9 +55,15 @@ BA International Politics **|** 2:1
 
 # WORK EXPERIENCE
 
+## Junior Frontend Developer
+
+### BRIGHTHR
+
+ Sept 2021 - July 2022
+
 ## 10+ Years Experience in Hospitality
 
-### Sept 2008 - Present
+### Sept 2008 - June 2021
 
 Whilst there is little overlap between Hospitality and Software, I have gained certain skills which can be invaluable in any team-based work environment.
 
@@ -60,7 +75,7 @@ Whilst there is little overlap between Hospitality and Software, I have gained c
 
 # EMPLOYMENT HISTORY
 
-### BrightHR
+### BRIGHTHR
 
 Sept 2021 - July 2022
 
