--- a/src/pages/resume.mdx
+++ b/src/pages/resume.mdx
@@ -9,24 +9,26 @@
 - Performing UI changes across various Bright products, using React
 and TailwindCSS.
 
-- Wrote unit tests in Jest with React Testing Library to ensure frontend
-repositories were kept at required code coverage.
+- Writing unit tests in Jest with React Testing Library to ensure frontend
+repositories were kept above required code coverage.
 
 - Performing various codebase maintenance tasks including; converting legacy
 styled-components to TailwindCSS, rewriting Enzyme unit tests to React
 Testing Library and converting React class components to using React Hooks.
 
-- Closely collaborating with Quality Assurance Analysts by giving detailed
-demonstrations and theorising solutions for squashing bugs in UI with a user
+- Working with UX designers collaboratively on new product designs, giving detailed opinions and reaching concensus based upon scalability and consistency across the product.
+
+- Closely working with Quality Assurance Analysts by giving detailed
+demonstrations and collaboratively theorising solutions for squashing bugs in UI with a user
 first approach.
 
-- Worked in an Agile environment with daily standups, UX show and tells, POA
+- Working in an Agile environment with daily standups, UX show and tells, POA
 meetings and bi-weekly retrospectives.
 
 - Periodically giving product demonstrations to Research and Development and
 Customer Service teams.
 
-## Some of tasks and projects I worked on included:
+## Some of the tasks and projects I worked on included:
 
 -  Migrating BrightHR’s change/reset password functionality from the primary
 WebApp to BrightHR’s User Account Web App.
@@ -35,21 +37,17 @@ WebApp to BrightHR’s User Account Web App.
 
 -  Elevating BrightHR’s Account Web App’s code coverage from 25% to 80%.
 
--  Working closely with UX designers collaboratively on new product designs,
-giving detailed opinions and reaching consensus based upon scalability and
-consistency across the product.
-
 -  Migrating PoP!, BrightHR's dedicated expense tracking application from mobile to primary Web Application by
 coding new UI and integrating with PoP!’s RESTful API.
 
--  Implemented numerous UI improvements to various areas of the product
+-  Implementing UI improvements to various areas of the product
 specifically addressing unit testing and responsive design using media queries.
 
 # EDUCATION
 
 ## Manchester Metropolitan University
 
-### September 2016 - June 2018
+ Sept 2015 - June 2018
 
 BA International Politics **|** 2:1
 
@@ -63,9 +61,9 @@ BA International Politics **|** 2:1
 
 ## 10+ Years Experience in Hospitality
 
-### Sept 2008 - June 2021
+Sept 2008 - June 2021
 
-Whilst there is little overlap between Hospitality and Software, I have gained certain skills which can be invaluable in any team-based work environment.
+Whilst there is little overlap between Hospitality and Software, I have gained certain skills from a variety of roles which can be invaluable in any team-based work environment.
 
 -   Insight into efficient teamwork producing a superior product.
 
